fix: shifted the pause text up a little

--- a/css/style.css
+++ b/css/style.css
@@ -100,7 +100,7 @@ body {
     z-index: 3;
     display: none;
     position: absolute;
-    top: 50%;
+    top: 44%;
     left: 50%;
     font-family: "Tiny5", sans-serif;
     font-weight: 400;
